--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
