--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "tiktok-assignment",
   "version": "0.1.0",
   "private": true,
+  
   "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start"
+},"scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
