--- a/.github/workflows/main_mytiktok.yml
+++ b/.github/workflows/main_mytiktok.yml
@@ -32,23 +32,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_09352CF820524159BDE9D2F1143F1AA8 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_70E10B506F9A4D0FA6C4A67FD819908D }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_DE6F71505B0C481481A4DE9A47D9AAA8 }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -56,4 +46,4 @@ jobs:
           app-name: 'MyTiktok'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8CC183296F1A4FA3AC21CDD83AC12F03 }}
