--- a/.github/workflows/main_mytiktok.yml
+++ b/.github/workflows/main_mytiktok.yml
@@ -32,13 +32,23 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_395F24BB762B411AB9B19D6C789FD561 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_472101BCB62F4DEF881580B1EE4CDEEA }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4F27130DDE6248C4AFD6F1B6EF48990B }}
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -46,4 +56,4 @@ jobs:
           app-name: 'MyTiktok'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8CC183296F1A4FA3AC21CDD83AC12F03 }}
+          
